--- a/app/views/design-system/pages/name.html
+++ b/app/views/design-system/pages/name.html
@@ -1,4 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
+{% set active = "pages" %}
+{% set activesub = "name" %}
 
 {% block pageTitle %}
 Start page template - NHS.UK prototype kit
@@ -6,75 +8,40 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-<!--
 {{ breadcrumb({
-      href: "/diat/design-system-home",
-      text: "Design System"
-  }) }}
--->
+    href: "/index",
+    text: "Home"
+}) }}
 
 {% endblock %}
 
 {% block content %}
 
-
-<div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-third">
-        <div class="article-section-nav-outer-wrapper">
-            <div id="sticky-nav" class="" style="">
-                <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
-                    <div class="article-section-nav-wrapper">
-                        <div class="article-section-nav">
-                            <nav id="toc" class="js-toc-list toc__list">
-                                <ol class="article-section-nav__list">
-                                    <li>
-                                        <a href="name">name</a>
-                                    </li>
-                                    <li>
-                                        <a href="address">address</a>
-                                    </li>
-                                    <li>
-                                        <a href="date-of-birth">dob</a>
-                                    </li>
-                                    <li>
-                                        <a href="nhs-number">nhs number</a>
-                                    </li>
-                                    <li>
-                                        <a href="start-page">start page</a>
-                                    </li>
-                                    <li>
-                                        <a href="end-page">end page/ sort of done</a>
-                                    </li>
-                                    <li>
-                                        <a href="feedback">feedback</a>
-                                    </li>
-                                    <li>
-                                        <a href="error-messages">error messages</a>
-                                    </li>
-                                    <li>
-                                        <a href="task-list">task list pattern</a>
-                                    </li>
-                                    <li>
-                                        <a href="check-answers">Check answers</a>
-                                    </li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="nhsuk-grid-column-two-thirds">
-        <h1>Pages</h1>
-
-        <p class="nhsuk-body-l">These pages are common across the NHSBSA. These can be used as templates to get you going.</p>
+    <div class="nhsuk-grid-row">
+        {% include "includes/left-pane__pages.html" %}
         
-        <p>Sometimes a service may have a more complex need than the templates listed here, and we welcome any research on these, such as international and company addresses.</p>
-
-    </div>
-
-</div>
-
-{% endblock %}
+        
+        <div class="nhsuk-grid-column-two-thirds">
+        <span class="nhsuk-caption-xl">Patterns</span>
+          <h1 class="heading-section">Name</h1>
+          <p class="nhsuk-body-l">example of component on a page.</p>
+        
+    <h3 class="nhsuk-u-visually-hidden"></h3>
+           <div class="example example-images confirmation details-margin-btm">
+       
+         
+            <form action="#" method="get">
+    
+                <div class="nhsuk-form-group">
+    
+                   
+    
+                </div>
+    
+                <input type="submit" class="nhsuk-button" value="Continue">
+    
+            </form>
+               </div>
+        </div>
+    
+        {% endblock %}
