--- a/app/views/design-system/styles/1.html
+++ b/app/views/design-system/styles/1.html
@@ -28,7 +28,7 @@ Start page template - NHS.UK prototype kit
                             <nav id="toc" class="js-toc-list toc__list">
                                 <ol class="article-section-nav__list">
                                     <li>
-                                        <a href="1">1</a>
+                                        <a href="colours">Colour</a>
                                     </li>
                                     <li>
                                         <a href="2">2</a>
