--- a/app/views/includes/left-pane__styles.html
+++ b/app/views/includes/left-pane__styles.html
@@ -1,24 +1,35 @@
-<div class="app-pane__subnav app-hide-mobile">
+<div class="nhsuk-grid-column-one-third">
+  <div class="article-section-nav-outer-wrapper">
+      <div id="sticky-nav" class="" style="">
+          <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
+              <div class="article-section-nav-wrapper">
+                  <div class="article-section-nav">
+                      <nav id="toc" class="js-toc-list toc__list">
+                          <ol class="article-section-nav__list">
+
+
+<!-- <div class="app-pane__subnav app-hide-mobile ">
   <nav class="app-subnav">
-    <ul class="app-subnav__section">
-      <li{% if activesub == "colour" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/styles/colour">Colour</a>
+    <ul class="app-subnav__section"> -->
+      <li{% if activesub == "colour" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/styles/colours">Colour</a>
       </li>
-      <li{% if activesub == "footer" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/styles/footer">Footer</a>
+      <li{% if activesub == "icons" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/styles/icon-usage">Icons</a>
       </li>
-      <li{% if activesub == "header" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/styles/header">Header</a>
+      <li{% if activesub == "images" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/styles/images">Images and illustrations</a>
       </li>
-      <li{% if activesub == "icons" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/styles/icons">Icons</a>
-      </li>
-      <li{% if activesub == "images" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/styles/images">Images and illustrations</a>
-      </li>
-      <li{% if activesub == "typography" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/styles/typography">Typography</a>
+      <li{% if activesub == "typography" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/styles/typog">Typography</a>
       </li>
     </ul>
   </nav>
+</div>
+
+
+</div>
+</div>
+</div>
+</div>
 </div>
