--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -22,13 +22,15 @@
 {% block header %}
   {{ header({
     "service": {
-        "name": "Prototype kit",
+        "name": "BSA Design System",
         "href": "/"
       },
       "showNav": "false",
       "showSearch": "false"
     })
   }}
+
+  
 {% endblock %}
 
 <!-- Footer goes inside the footer block -->
