--- a/app/views/design-system/community/contribute.html
+++ b/app/views/design-system/community/contribute.html
@@ -1,4 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
+{% set active = "community" %}
+{% set activesub = "contribute" %}
 
 {% block pageTitle %}
 Start page template - NHS.UK prototype kit
@@ -6,18 +8,10 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-<!--
 {{ breadcrumb({
-  items: [
-    {
-      href: "/diat/design-system-home",
-      text: "Design System"
-    }
-  ],
-      href: "/diat/community/community",
-      text: "Community"
+    href: "/index",
+    text: "Home"
 }) }}
--->
 
 
 {% endblock %}
@@ -26,31 +20,9 @@ Start page template - NHS.UK prototype kit
 
 
 <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-third">
-        <div class="article-section-nav-outer-wrapper">
-            <div id="sticky-nav" class="" style="">
-                <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
-                    <div class="article-section-nav-wrapper">
-                        <div class="article-section-nav">
-                            <nav id="toc" class="js-toc-list toc__list">
-                                <ol class="article-section-nav__list">
-                                    <li>
-                                        <a href="backlog">Backlog</a>
-                                    </li>
-                                    <li>
-                                        <a href="contribute" class="active">Contribute</a>
-                                    </li>
-                                    <li>
-                                        <a href="using-patterns">Using the system</a>
-                                    </li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include "includes/left-pane__contribute.html" %}
+    
+    
 
     <div class="nhsuk-grid-column-two-thirds">
         <span class="nhsuk-caption-xl">Community</span>
