--- a/app/views/design-system/pages/index.html
+++ b/app/views/design-system/pages/index.html
@@ -6,12 +6,10 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-<!--
 {{ breadcrumb({
-      href: "/diat/design-system-home",
-      text: "Design System"
-  }) }}
--->
+    href: "/index",
+    text: "Home"
+}) }}
 
 {% endblock %}
 
@@ -19,52 +17,9 @@ Start page template - NHS.UK prototype kit
 
 
 <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-third">
-        <div class="article-section-nav-outer-wrapper">
-            <div id="sticky-nav" class="" style="">
-                <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
-                    <div class="article-section-nav-wrapper">
-                        <div class="article-section-nav">
-                            <nav id="toc" class="js-toc-list toc__list">
-                                <ol class="article-section-nav__list">
-                                    <li>
-                                        <a href="/design-system/pages/name">name</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/address">address</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/date-of-birth">dob</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/nhs-number">nhs number</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/start-page">start page</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/end-page">end page/ sort of done</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/feedback">feedback</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/error-messages">error messages</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/task-list">task list pattern</a>
-                                    </li>
-                                    <li>
-                                        <a href="/design-system/pages/check-answers">Check answers</a>
-                                    </li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include "includes/left-pane__pages.html" %}
+    
+    
 
     <div class="nhsuk-grid-column-two-thirds">
         <h1>Pages</h1>
