--- a/app/views/design-system/patterns/index.html
+++ b/app/views/design-system/patterns/index.html
@@ -6,6 +6,10 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
+{{ breadcrumb({
+    href: "/index",
+    text: "Home"
+}) }}
 
 {% endblock %}
 
@@ -13,57 +17,9 @@ Start page template - NHS.UK prototype kit
 
 
 <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-third">
-        <div class="article-section-nav-outer-wrapper">
-                    <div class="article-section-nav-wrapper">
-                        <div class="article-section-nav">
-                            <nav id="toc" class="js-toc-list toc__list">
-                                <ol class="article-section-nav__list">
-                                    <li>
-                                        <a href="patterns/confirmation-loop">Check and confirm</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/help">Contextual help</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/enquiry">Enquiry form</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/error-pages">Error Page</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/sign-out">Leaving a service</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/guidance-image">Guidance images</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/identifying-users">Authentication of users</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/interruption-card">Interruption card</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/modal">Modal window</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/multiple-loops">Multiple loops</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/postcode">Postcode lookup</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/question-funnel">Question funnel</a>
-                                    </li>
-                                    <li>
-                                        <a href="patterns/upload-file">Upload a document</a>
-                                    </li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    {% include "includes/left-pane__patterns.html" %}
+    
+    
 
     <div class="nhsuk-grid-column-two-thirds">
         <h1>Patterns</h1>
