--- a/app/views/design-system/patterns/modal.html
+++ b/app/views/design-system/patterns/modal.html
@@ -10,68 +10,12 @@ Modal window - NHSBSA design system
 {% block content %}
 
 <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-third">
-        <div class="article-section-nav-outer-wrapper">
-
-   
-                    <div class="article-section-nav-wrapper">
-                        <div class="article-section-nav">
-                            <nav id="toc" class="js-toc-list toc__list">
-                                <ol class="article-section-nav__list">
-                                    <li>
-                                        <a href="confirmation-loop">Check and confirm</a>
-                                    </li>
-                                    <li>
-                                        <a href="help">Contextual help</a>
-                                    </li>
-                                    <li>
-                                        <a href="enquiry">Enquiry form</a>
-                                    </li>
-                                    <li>
-                                        <a href="error-pages">Error Page</a>
-                                    </li>
-                                    <li>
-                                        <a href="sign-out">Leaving a service</a>
-                                    </li>
-                                    <li>
-                                        <a href="guidance-image">Guidance images</a>
-                                    </li>
-                                    <li>
-                                        <a href="identifying-users">Authentication of users</a>
-                                    </li>
-                                    <li>
-                                        <a href="interruption-card">Interruption card</a>
-                                    </li>
-                                    <li>
-                                        <a href="modal">Time out</a>
-                                    </li>
-                                    <li>
-                                        <a href="multiple-loops">Multiple loops</a>
-                                    </li>
-                                    <li>
-                                        <a href="nhs-number">NHS number lookup</a>
-                                    </li>
-                                    <li>
-                                        <a href="postcode">Postcode lookup</a>
-                                    </li>
-                                    <li>
-                                        <a href="question-funnel">Question funnel</a>
-                                    </li>
-                                    <li>
-                                        <a href="upload-file">Upload a document</a>
-                                    </li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-    
-
-        </div>
-    </div>
+    {% include "includes/left-pane__patterns.html" %}
+     
 
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-xl">Patterns</span>
-      <h1 class="heading-section">Time out</h1>
+      <h1 class="heading-section">Time out (modal)</h1>
       <p class="nhsuk-body-l">Creating focus on a single interaction.</p>
 
       <h2 class="nhsuk-heading-m">When to use this pattern</h2>
