--- a/app/views/design-system/resources/templates.html
+++ b/app/views/design-system/resources/templates.html
@@ -1,4 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
+{% set active = "resoucres" %}
+{% set activesub = "template" %}
 
 {% block pageTitle %}
 Start page template - NHS.UK prototype kit
@@ -6,12 +8,13 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-<!--
+
 {{ breadcrumb({
-      href: "/diat/design-system-home",
-      text: "Design System"
-  }) }}
--->
+    href: "/index",
+    text: "Home"
+}) }}
+
+
 
 {% endblock %}
 
@@ -19,37 +22,8 @@ Start page template - NHS.UK prototype kit
 
 
 <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-one-third">
-        <div class="article-section-nav-outer-wrapper">
-            <div id="sticky-nav" class="" style="">
-                <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
-                    <div class="article-section-nav-wrapper">
-                        <div class="article-section-nav">
-                            <nav id="toc" class="js-toc-list toc__list">
-                                <ol class="article-section-nav__list">
-                                    <li>
-                                        <a href="accessibility">Accessibility</a>
-                                    </li>
-                                    <li>
-                                        <a href="nhsuk">NHS.UK</a>
-                                    </li>
-                                    <li>
-                                        <a href="gov">GOV.UK</a>
-                                    </li>
-                                    <li>
-                                        <a href="prototyping">Prototyping</a>
-                                    </li>
-                                    <li>
-                                        <a href="templates" class="active">Templates</a>
-                                    </li>
-                                </ol>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {% include "includes/left-pane__resources.html" %}
+    
 
     <div class="nhsuk-grid-column-two-thirds">
         <span class="nhsuk-caption-xl">Resources</span>
