--- a/app/views/includes/left-pane__components.html
+++ b/app/views/includes/left-pane__components.html
@@ -14,52 +14,52 @@
   <nav class="app-subnav">
     <ul class="app-subnav__section">
 -->
-      <li{% if activesub == "alerts" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "alerts" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/alerts">Alerts</a>
       </li>
-      <li{% if activesub == "back" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "back" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/back">Back link</a>
       </li>
-      <li{% if activesub == "buttons" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "buttons" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/buttons">Buttons</a>
       </li>
-      <li{% if activesub == "checkboxes" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "checkboxes" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/checkboxes">Checkboxes</a>
       </li>
-      <li{% if activesub == "confirmation" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "confirmation" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/confirm-pages">Confirmation pages</a>
       </li>
-      <li{% if activesub == "highlights" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "highlights" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/highlighting-matches">Highlighted search matches</a>
       </li>
       <!-- <li{% if activesub == "icons" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/components/icons">Icons</a>
       </li> -->
-      <li{% if activesub == "labels" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "labels" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/labels">Labels</a>
       </li>
-      <li{% if activesub == "pagination" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "pagination" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/pagination">Pagination</a>
       </li>
-      <li{% if activesub == "radios" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "radios" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/radios">Radio buttons</a>
       </li>
-      <li{% if activesub == "side" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "side" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/side-tab">Side menu</a>
       </li>
-      <li{% if activesub == "status" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "status" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/status">Status</a>
       </li>
-      <li{% if activesub == "subnav" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "subnav" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/navigation">Sub-navigation</a>
       </li>
-      <li{% if activesub == "multiselect" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "multiselect" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/table-multiselect">Table multi-select</a>
       </li>
-    <li{% if activesub == "tabs" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <li{% if activesub == "tabs" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/tabs">Tabs</a>
       </li>
-      <li{% if activesub == "timeline" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "timeline" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/timeline">Timeline</a>
       </li>
 
