--- a/app/views/includes/left-pane__resources.html
+++ b/app/views/includes/left-pane__resources.html
@@ -1,16 +1,40 @@
-<div class="app-pane__subnav app-hide-mobile">
+<div class="nhsuk-grid-column-one-third">
+  <div class="article-section-nav-outer-wrapper">
+      <div id="sticky-nav" class="" style="">
+          <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
+              <div class="article-section-nav-wrapper">
+                  <div class="article-section-nav">
+                      <nav id="toc" class="js-toc-list toc__list">
+                          <ol class="article-section-nav__list">
+
+
+
+<!-- <div class="app-pane__subnav app-hide-mobile ">
   <nav class="app-subnav">
-    <ul class="app-subnav__section">
-      <li{% if activesub == "accessibility" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/resources/accessibility">Accessibility</a>
+    <ul class="app-subnav__section"> -->
+      <li{% if activesub == "accessibility" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/resources/accessibility">Accessibility</a>
       </li>
-      <li{% if activesub == "government" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/resources/government">GOV.UK</a>
+      <li{% if activesub == "nhsuk" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/resources/nhsuk">NHS.UK</a>
       </li>
-      <li{% if activesub == "prototyping" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/resources/prototyping">Prototyping</a>
+      <li{% if activesub == "govuk" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/resources/gov">GOV.UK</a>
+      </li>
+      <li{% if activesub == "prototype" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/resources/prototyping">Prototyping</a>
+      </li>
+      <li{% if activesub == "template" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/resources/templates">Templates</a>
       </li>
 
     </ul>
   </nav>
+</div>
+
+
+</div>
+</div>
+</div>
+</div>
 </div>
