--- a/app/views/index.html
+++ b/app/views/index.html
@@ -74,17 +74,17 @@ NHSBSA design system - Home
 
         <div id="patterns" class="article-section">
             <h2><a href="/design-system/patterns">Patterns</a></h2>
-            <p>blah</p>
+            <p>Patterns are tested and agreed solutions to common needs.</p>
         </div>
 
         <div id="components" class="article-section ">
             <h2><a href="/design-system/components">Components</a></h2>
-            <p>blah</p>
+            <p>Components are reusable elements of the user interface.</p>
         </div>
 
         <div id="styles" class="article-section ">
             <h2><a href="styles/styles">Styles</a></h2>
-            <p>blaaaahhhhh</p>
+            <p>Make your service look and feel like the NHS website with these tested styles.</p>
         </div>
 
     </div>
